@@ -225,6 +225,8 @@ Bug fixes:
 - PR#6841: Changing compilation unit name with -o breaks ocamldebug
 - PR#6843: record weak dependencies even when the .cmi is missing
   (Leo White, Gabriel Scherer)
+- PR#6849: Inverted pattern unification error
+- PR#6862: Exhaustiveness check wrong for class constructor arguments
 - GPR#143: fix getsockopt behaviour for boolean socket options
   (Anil Madhavapeddy and Andrew Ray)
 - ocamlbuild on cygwin cannot find ocamlfind
